<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Skrik</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title_clear_alldata">Clear all data</string>
    <string name="title_clear_channel">Empty conversation</string>
    <string name="title_tables">Tables</string>
    <string name="title_techdetails">Technical details</string>
    <string name="title_usercfg">User configuration</string>
    <string name="title_userdetails">User details</string>
    <string name="title_userreg_new">Who are you?</string>

    <string name="all_username">Name</string>
    <string name="all_email">E-Mail</string>
    <string name="all_phone">Phone Number</string>


    <string name="btn_all_clear">Clear</string>
    <string name="btn_all_clearall">Clear all</string>
    <string name="btn_all_update">Update</string>
    <string name="btn_channel_send">Send</string>
    <string name="btn_main_getuser">Give me one!</string>
    <string name="btn_overview_delete">Delete</string>
    <string name="btn_overview_newchannel">New</string>
    <string name="btn_searchuser_search">Search</string>
    <string name="btn_userreg_reset">Back</string>
    <string name="btn_usercfg_entermanual">Enter manually</string>
    <string name="btn_usercfg_save">Save</string>


    <string name="hint_searchuser_search">Search ...</string>
    <string name="hint_userreg_code">Enter the code</string>
    <string name="hint_usercfg_email">Enter your e-mail</string>
    <string name="hint_usercfg_name">Enter your name</string>
    <string name="hint_usercfg_pass">Add a password</string>
    <string name="hint_usercfg_phone">Enter your phone number</string>


    <string name="msg_first_offline">Registering a new user requires internet. Get connected and push here to retry</string>
    <string name="msg_del_confirm">Are you sure you want to DELETE ALL your USER DATA?</string>
    <string name="msg_del_conf_n">Ups, NO!</string>
    <string name="msg_del_conf_y">YES, do it!</string>
    <string name="msg_link_account">What do you want to link your account to?</string>
    <string name="msg_press_exit">Press back again to close this app</string>
    <string name="msg_user_not_registered">Your user is not yet registered. Get connected to Internet and retry to save</string>
    <string name="msg_userreg_writecode">Enter below the CODE we sent to your e-Mail</string>
    <string name="msg_userreg_writeemail">We need an e-Mail address to secure your user. In the future we might need to send you a code using your e-Mail address, so, please, use a real one</string>
    <string name="msg_userreg_writephone">We need a phone number to send notifications to</string>
    <string name="msg_userreg_username">Which Name do you want to use?</string>
    <string name="msg_you_need_user">You need a user name</string>

    <string name="aux_date_format_full">dd/MM/yy HH:mm</string>
    <string name="aux_date_format_hour">HH:mm</string>
    <string name="aux_date_format_day">dd/MM HH:mm</string>
    <string name="aux_date_yesterday">yesterday</string>
    <string name="aux_dummy_uid">99999999999999</string>
    <string name="aux_result_ok">OK</string>
    <string name="aux_result_passwd">password</string>
    <string name="aux_result_username">username</string>
    <string name="aux_result_valid_email">\'VALID\' Email</string>
    <string name="aux_result_valid_email_phone">\'VALID\' Email or Phone</string>
    <string name="aux_result_provide">You need to provide: </string>

</resources>