<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_usrreg_title"
        android:text="@string/title_userreg_new"
        android:layout_gravity="center_horizontal|top"
        android:layout_margin="5dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center|top"
        android:layout_margin="40dp"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="166dp"
            android:text="New Text"
            android:id="@+id/tv_usrreg_info"
            android:gravity="center_horizontal|bottom"
            android:layout_margin="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:text=""
            android:id="@+id/tv_usrreg_middleline"
            android:background="@color/white" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <EditText
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text=""
                android:hint="@string/hint_usercfg_phone"
                android:id="@+id/et_usrreg_phone"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:inputType="phone"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_above="@+id/btn_userreg_ok" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:id="@+id/sp_usrreg_phone"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_above="@+id/btn_userreg_ok" />

            <EditText
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text=""
                android:hint="@string/hint_usercfg_email"
                android:id="@+id/et_usrreg_email"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:inputType="textEmailAddress"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_alignBottom="@+id/et_usrreg_phone" />

            <EditText
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text=""
                android:hint="@string/hint_userreg_code"
                android:id="@+id/et_usrreg_code"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_above="@+id/btn_userreg_ok" />

            <EditText
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text=""
                android:hint="@string/hint_usercfg_name"
                android:id="@+id/et_usrreg_name"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_above="@+id/btn_userreg_ok" />

            <Button
                android:visibility="invisible"
                android:enabled="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="OK"
                android:id="@+id/btn_userreg_ok"
                android:onClick="dataAdd"
                android:layout_above="@+id/tv_name_preview"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Name"
                android:id="@+id/tv_name_preview"
                android:layout_above="@+id/tv_phone_preview"
                android:layout_alignLeft="@+id/tv_email_preview"
                android:layout_alignStart="@+id/tv_email_preview" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Phone"
                android:id="@+id/tv_phone_preview"
                android:layout_above="@+id/tv_email_preview"
                android:layout_alignLeft="@+id/tv_email_preview"
                android:layout_alignStart="@+id/tv_email_preview" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="e-Mail"
                android:id="@+id/tv_email_preview"
                android:layout_alignParentBottom="true"
                android:layout_alignLeft="@+id/btn_userreg_ok"
                android:layout_alignStart="@+id/btn_userreg_ok" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_userreg_reset"
                android:id="@+id/btn_userreg_reset"
                android:onClick="dataReset"
                android:layout_alignTop="@+id/tv_name_preview"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true" />
        </RelativeLayout>


    </LinearLayout>

</FrameLayout>
